# top10rust

./: Cargo.toml
data/: top_10_2020.txt
src/: data_store.rs  main.rs  record_pool.rs  report.rs
