[package]
name = "top10rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bigdecimal = { version = "0.4.5", features = ["serde"] }
bimap = "0.6.3"
clap = { version = "4.5.16", features = ["derive"] }
csv-async = { version = "1.3.0", features = ["with_serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["stream"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec", "io", "compat"] }
